ncc/testsuite/negative/unbound-member.n

class C {
  public mutable x : int;
  public m () : void {}
}

class M {
  static main () : void {
    def c = (null : C);
    c.x = 3; // OK
    Foo.Bar.baz;        // E: unbound name `Foo'
    M.quxx;           // E: unbound name `M.quxx'
    c.y = 3    // E: there is no member named `y' in C
  }

  static f (c : C) : void { c.m = 3 }    // E: .*read-only
}


class M1 {
  fld : int;
  meth () : void {}
  static g () : void { def x = 1; x = M.fld }    // E: unbound name `M.fld'
  static h () : void { def x = 1; x = M.meth }    // E: unbound name `M.meth'
}
